--- a/package.json
+++ b/package.json
@@ -31,5 +31,18 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^7.1.2"
-  }
+  },
+  "description": "NOT ME BUT YOU",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnkitYadav7704/NSS-MMMUT.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AnkitYadav7704/NSS-MMMUT/issues"
+  },
+  "homepage": "https://github.com/AnkitYadav7704/NSS-MMMUT#readme"
 }
